--- a/src/app/films-list/films-list.component.html
+++ b/src/app/films-list/films-list.component.html
@@ -5,7 +5,7 @@
       <mat-card class="films-list__card">
         <mat-card-header>
           <mat-card-title>{{film.title}}</mat-card-title>
-          <mat-card-subtitle>Жанры: ...</mat-card-subtitle>
+          <mat-card-subtitle>Жанры: {{film.genre_ids | genres}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content class="films-list__card-content">
           <div class="films-list__overview">{{ film.overview}}</div>
