add pagination for films

--- a/src/app/films-list/films-list.component.html
+++ b/src/app/films-list/films-list.component.html
@@ -14,4 +14,8 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+  <mat-paginator [length]="totalSize$ | async"
+                 [pageSize]="pageSize$ | async"
+                 (page)="onChangePage($event)">
+  </mat-paginator>
 </div>
