--- a/src/app/films-list/films-list.component.html
+++ b/src/app/films-list/films-list.component.html
@@ -1,5 +1,13 @@
 <div class="films-list__container">
   <h1 class="mat-h1">Movie list</h1>
+  <form (ngSubmit)="searchFilms()" #form="ngForm">
+    <mat-form-field class="films-list__search">
+      <input type="search" matInput [(ngModel)]="seachText" name="search">
+    </mat-form-field>
+    <button mat-icon-button type="submit">
+      <mat-icon aria-label="Search">search</mat-icon>
+    </button>
+  </form>
   <mat-grid-list cols="5">
     <mat-grid-tile *ngFor="let film of films$ | async">
       <mat-card class="films-list__card">
