--- a/src/app/films-list/films-list.component.html
+++ b/src/app/films-list/films-list.component.html
@@ -1,8 +1,8 @@
 <div class="films-list__container">
-  <h1 class="mat-h1">Movie list</h1>
+  <h2 class="mat-h2 films-list__title">Список фильмов</h2>
   <form (ngSubmit)="searchFilms()" #form="ngForm">
     <mat-form-field class="films-list__search">
-      <input type="search" matInput [(ngModel)]="seachText" name="search">
+      <input type="search" matInput [(ngModel)]="seachText" name="search" placeholder="Поиск">
     </mat-form-field>
     <button mat-icon-button type="submit">
       <mat-icon aria-label="Search">search</mat-icon>
@@ -12,11 +12,13 @@
     <mat-grid-tile *ngFor="let film of films$ | async">
       <mat-card class="films-list__card">
         <mat-card-header>
-          <mat-card-title>{{film.title}}</mat-card-title>
+          <mat-card-title>
+            <a [routerLink]="'/films/' + film.id">{{film.title}}</a>
+          </mat-card-title>
           <mat-card-subtitle>Жанры: {{film.genre_ids | genres}}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content class="films-list__card-content">
-          <div class="films-list__overview">{{ film.overview}}</div>
+          <div class="films-list__overview">{{ film.overview || 'Описание отсутствует'}}</div>
           <img mat-card-image class="films-list__poster" [src]="'http://image.tmdb.org/t/p/w92/' + film.poster_path">
         </mat-card-content>
       </mat-card>
