--- a/src/app/films-list/films-list.component.scss
+++ b/src/app/films-list/films-list.component.scss
@@ -2,18 +2,26 @@
   &__container {
     margin: 20px;
   }
+  &__title {
+    margin: 0;
+  }
   &__card {
-    margin: 15px;
-    padding: 15px;
     height: 300px;
+    width: 100%;
+    margin: 0 10px;
+    padding: 10px;
     box-sizing: border-box;
     overflow: hidden;
   }
   &__card-content {
-    height: 138px;
     display: flex;
+    height: 138px;
+    justify-content: space-between;
   }
   &__poster {
+    height: 138px;
+    width: 92px;
+    min-width: 92px;
     margin: 0 0 0 10px;
   }
   &__overview {
