--- a/src/app/films-item/films-item.component.html
+++ b/src/app/films-item/films-item.component.html
@@ -1,24 +1,28 @@
 <div class="films-item__container">
   <mat-card class="films-item__card">
-    <mat-card-title>{{ filmsItem?.title }}</mat-card-title>
+    <mat-card-title>{{ filmsItem.title }}</mat-card-title>
     <mat-card-subtitle>
       <div>
         <span>Жанры:</span>
-        <span *ngFor="let genre of filmsItem?.genres; last as isLast">
+        <span *ngFor="let genre of filmsItem.genres; last as isLast">
           {{ genre.name }}{{!isLast ? ',' : ''}}
         </span>
       </div>
       <div>
         <span>Страны:</span>
-        <span *ngFor="let country of filmsItem?.production_countries; last as isLast">
+        <span *ngFor="let country of filmsItem.production_countries; last as isLast">
           {{ country.name }}{{!isLast ? ',' : ''}}
         </span>
       </div>
-      <div>Средний рейтинг: {{filmsItem?.vote_average}}</div>
+      <div>Средний рейтинг: {{filmsItem.vote_average}}</div>
     </mat-card-subtitle>
-    <img mat-card-image class="films-item__poster" [src]="'http://image.tmdb.org/t/p/w342/' + filmsItem?.poster_path">
+    <img
+      mat-card-image
+      class="films-item__poster"
+      [src]="filmsItem.poster_path ? 'http://image.tmdb.org/t/p/w342/' + filmsItem.poster_path: ''"
+    >
     <mat-card-content>
-      {{ filmsItem?.overview }}
+      {{ filmsItem.overview || 'Описание отсутствует' }}
     </mat-card-content>
   </mat-card>
 
