add component 'SimilarFilmsComponent'

--- a/src/app/films-item/films-item.component.html
+++ b/src/app/films-item/films-item.component.html
@@ -27,4 +27,6 @@
   </mat-card>
 
   <app-recommended-films [filmId]="filmsItem.id"></app-recommended-films>
+
+  <app-similar-films [filmId]="filmsItem.id"></app-similar-films>
 </div>
