--- a/src/app/films-item/films-item.component.scss
+++ b/src/app/films-item/films-item.component.scss
@@ -15,6 +15,7 @@ mat-card-content {
 img[mat-card-image] {
   display: block;
   width: 300px;
+  min-width: 300px;
   height: 450px;
   margin: 0 10px;
 }
