--- a/src/app/films-list/films-list.component.html
+++ b/src/app/films-list/films-list.component.html
@@ -25,6 +25,9 @@
             [src]="film.poster_path ? 'http://image.tmdb.org/t/p/w92/' + film.poster_path : ''"
           >
         </mat-card-content>
+        <mat-card-actions>
+          <button mat-button (click)="addFavoriteFilm(film)">Добавить в избранное</button>
+        </mat-card-actions>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
