--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<mat-toolbar>
-  <a routerLink="/films">Список фильмов</a>
-</mat-toolbar>
+<app-toolbar></app-toolbar>
 
 <router-outlet></router-outlet>
