--- a/src/app/components/films-short-list/films-short-list.component.html
+++ b/src/app/components/films-short-list/films-short-list.component.html
@@ -1,6 +1,6 @@
 <ul>
   <li *ngFor="let film of films">
-    <a [routerLink]="'/films/' + film.id">
+    <a [routerLink]="'/popular-films/' + film.id">
       <img
         [src]="film.poster_path ? 'http://image.tmdb.org/t/p/w92/' + film.poster_path : ''"
         [alt]="film.title"
