--- a/src/app/containers/films-full-list/films-full-list.component.html
+++ b/src/app/containers/films-full-list/films-full-list.component.html
@@ -1,9 +1,9 @@
-<mat-grid-list cols="5">
+<mat-grid-list cols="5" *ngIf="films.length">
   <mat-grid-tile *ngFor="let film of films">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
-          <a [routerLink]="'/films/' + film.id">{{film.title}}</a>
+          <a [routerLink]="'/popular-films/' + film.id">{{film.title}}</a>
         </mat-card-title>
         <mat-card-subtitle>Жанры: {{film.genre_ids | genres}}</mat-card-subtitle>
       </mat-card-header>
