--- a/src/app/containers/films-full-list/films-full-list.component.scss
+++ b/src/app/containers/films-full-list/films-full-list.component.scss
@@ -1,4 +1,7 @@
 mat-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   height: 320px;
   width: 100%;
   margin: 0 10px;
