--- a/src/app/containers/films-full-list/films-full-list.component.html
+++ b/src/app/containers/films-full-list/films-full-list.component.html
@@ -5,7 +5,7 @@
         <mat-card-title>
           <a [routerLink]="'/popular-films/' + film.id">{{film.title}}</a>
         </mat-card-title>
-        <mat-card-subtitle>Жанры: {{film.genre_ids | genres}}</mat-card-subtitle>
+        <mat-card-subtitle>Жанры: {{film | genres}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
         <div class="overview">{{ film.overview || 'Описание отсутствует'}}</div>
